--- a/src/pages/indexPage/indexPage.html
+++ b/src/pages/indexPage/indexPage.html
@@ -97,7 +97,7 @@
       <div class="common-rank"
            ng-if="newViewData.leading_ranking_company && newViewData.leading_ranking_company.leading_count != 0">
         <div class="rank-title">
-          <div class="left lead">领队排行榜</div>
+          <div class="left lead">领队人均业绩排行榜</div>
           <div class="people-num" style="display:none;">{{newViewData.personal_ranking_team.user_count ||
             0}}&nbsp;位组员<img
               src="build/assets/img/indexPage/icon_spread.png"/></div>
