--- a/src/pages/myInfo/myInfo.html
+++ b/src/pages/myInfo/myInfo.html
@@ -67,8 +67,8 @@
         <div class="top">
           <img src="build/assets/img/myInfo/icon_teacher_regional_district.png"/>
           <div class="info">
-            <div class="title">教师用户地域分布</div>
-            <div class="point">晓黑板教师用户所处的地区人数分布</div>
+            <div class="title">教师用户学校地域分布</div>
+            <div class="point">晓黑板老师用户学校所处的地区人数分布</div>
           </div>
           <div class="auto-height"></div>
         </div>
