--- a/src/pages/indexPage/indexPage.html
+++ b/src/pages/indexPage/indexPage.html
@@ -15,7 +15,7 @@
     </ion-refresher>
 
     <div class="global-container">
-      <div class="statistics-time" v-cloak>
+      <div class="statistics-time" >
         统计自{{newViewData.day_time.start_time}}至{{newViewData.day_time.end_time}}
       </div>
       <div class="new-data-statistics">
