--- a/src/pages/school/schoolClass/schoolClass.html
+++ b/src/pages/school/schoolClass/schoolClass.html
@@ -1,11 +1,55 @@
-<ion-view view-title="学校情况统计" class="schoolDetail">
-  <ion-header-bar align-title="center"  class="head-bg">
-    <div class="title titleStyle">
-      学校名称
-    </div>
-    <img class="right-image" src="build/assets/img/indexPage/icon_select_time.png" ng-click="openPopover($event)"/>
-  </ion-header-bar>
-  <ion-content class="content-style" delegate-handle="mainScroll">
+<ion-view view-title="学校情况统计" class="indexPage myInfo school schoolClass">
 
+  <div class="row rowHead fadeIn rowHeadSp" id="the-head-class-id">
+    <span class="col-25 spanWidth">
+      <button class="button button-icon icon ion-ios-arrow-left rowHeadButton" ng-click="goBack()"></button>
+    </span>
+    <span class="col-50 rowHeadTitle">学校名称</span>
+    <span class="col-25">
+      <!--<img class="right-image" src="build/assets/img/indexPage/icon_select_time.png" ng-click="openPopover($event)"/>-->
+    </span>
+  </div>
+  <div style="position: absolute;z-index: 90;height: 60px;width: 70px" ng-click="goBack()"></div>
+  <div id="the-image-class-id" class="elastic-image ">
+    <button class="button button-icon icon ion-ios-arrow-left imgButton" ng-click="goBack()"></button>
+    <div class="contentText">
+      <div class="imgDiv"><img src="build/assets/img/school/icon_explain.png"></div>
+      <div class="schoolNameHead">初三三班</div>
+      <div class="schoolAdress">
+        <span>&nbsp;整&nbsp;</span>&nbsp;&nbsp;<span>上海武宁路小学</span>
+      </div>
+    </div>
+  </div>
+
+
+  <ion-content elastic-image="the-image-class-id,the-head-class-id,contentAll-class" id="contentAll-class">
+    <div class="the-content ">
+      <div class="row rowStyleTop">
+        <div class="col-50" ng-class="{'headStyle': config.headStyleActive}" ng-click="selectModules('class')">教师</div>
+        <div class="col-50" ng-class="{'headStyle': !config.headStyleActive}" ng-click="selectModules('architecture')">
+          成员
+        </div>
+      </div>
+      <div class="padding content-style" style="min-height: 800px">
+        <div ng-repeat="i in [1,23]">
+          <div class="listDesc">共3位</div>
+          <div class="list">
+            <a class="item item-avatar itemStyle" ng-repeat="i in [1,2,7]" ng-click="goSchoolDetail()">
+              <img ng-src="build/assets/img/login/product_logo.png" class="imgStyle">
+              <div class="row rowStyleDetail">
+                <div class="col-50 schoolName">一班</div>
+                <div class="col-50 schoolTime">2017/01/01</div>
+              </div>
+              <div class="row rowStyleDetail">
+                <div class="col-50 personName">数学</div>
+                <div class="col-50" style="text-align: right" ng-class="{'fontColor':config.font,'personName' :!config.font}">王老师</div>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    </div>
   </ion-content>
 </ion-view>
