--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,8 @@
   <title></title>
   <link href="build/lib/ionic/release/css/ionic.min.css" rel="stylesheet">
   <link href="build/css/app.core.css" rel="stylesheet">
+  <link href="build/lib/mobiscroll/css/mobiscroll.custom-3.0.0-beta6.min.css" rel="stylesheet">
+
   <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
   <link href="css/ionic.src.css" rel="stylesheet">
   -->
@@ -21,6 +23,8 @@
   <script src="build/lib/ngCordova/dist/ng-cordova.js"></script>
   <!-- cordova script (this will be a 404 during development) -->
   <script src="build/lib/oclazyload/dist/ocLazyLoad.min.js"></script>
+  <script src="build/lib/mobiscroll/js/mobiscroll.custom-3.0.0-beta6.min.js"></script>
+
   <script src="cordova.js"></script>
 
 </head>
