--- a/src/pages/timeSelect/timeSelectData/timeSelectData.html
+++ b/src/pages/timeSelect/timeSelectData/timeSelectData.html
@@ -62,6 +62,19 @@
             </span>
           </div>
         </div>
+        <div class="line" ></div>
+        <div class="row itemClass" ng-click="goList('1')">
+          <div class="col-50 imageClass">
+            <img src="build/assets/img/selectTime/paihangbang.png">
+            排行榜
+          </div>
+          <div class="col-50 numClass">
+            <!--{{newViewData.new_data.new_school || 0}}-->
+            <span>
+              <i class="ion-ios-arrow-right rightGo"></i>
+            </span>
+          </div>
+        </div>
       </div>
     </div>
 
